# Omnid_Project

./: README.md
docker_setup/: .ros_settings.bash.swp  Dockerfile  dockint  omnid_docs.repos  ros_settings.bash
omnid/: CMakeLists.txt  README.md  package.xml
omnid/cfg/: omnid.cfg
omnid/launch/: moveit_omnid.launch  omnid.launch  test_urdf.launch
omnid/params/: params.yaml
omnid/rviz/: delta_arm.urdf.rviz
omnid/scripts/: ctypes_test.py  disk.py  object.py  omnid_model.py  omnid_model_cp.py  omnid_simulator  omnid_simulator_cp
omnid/scripts/diff_drive_example/: omnid_model.py  omnid_simulator_diff_drive_example
omnid/scripts/ref_minitaur/: minitaur.py  minitaur_evaluate.py  minitaur_test.py
omnid/scripts/spring_test/: spring_test_simulator  torsion_spring.py
omnid/urdf/: delta_robot.urdf  delta_robot.urdf.xacro  delta_robot_for_moveit.urdf.xacro  delta_robot_group_moveit.urdf.xacro  delta_robot_moveit.urdf.xacro  delta_robot_pybullet.urdf  delta_robot_pybullet.urdf.xacro  disk.urdf  disk.urdf.xacro  get_urdf.bash  update_urdf.bash
omnid/urdf/spring/: spring.urdf  spring.urdf.xacro  torsion_spring_proof.ipynb
omnid_kinematics_plugin/: CMakeLists.txt  omnid_kinematics_plugin.xml  package.xml
omnid_kinematics_plugin/include/omnid_kinematics_plugin/: omnid_kinematics_plugin.h
omnid_kinematics_plugin/src/: omnid_kinematics_plugin.cpp
omnid_move_group_interface/: CMakeLists.txt  package.xml
omnid_move_group_interface/include/omnid_move_group_interface/: omnid_group_ik.hpp  omnid_move_group_interface.hpp
omnid_move_group_interface/src/: omnid_group_ik.cpp  omnid_move_group_interface_node.cpp
omnid_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omnid_moveit_config/config/: controllers.yaml  delta-robot-RUU.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  omnid_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
omnid_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  delta-robot-RUU_moveit_controller_manager.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
omnid_planning_adapter_plugin/: CMakeLists.txt  omnid_planning_adapter_plugin.xml  package.xml
omnid_planning_adapter_plugin/include/omnid_planning_adapter_plugin/: omnid_planning_adapter_plugin.h
omnid_planning_adapter_plugin/src/: omnid_planning_adapter_plugin.cpp
omnid_supplementary_packages/tf2_armadillo/: README.md  package.xml
omnid_supplementary_packages/tf2_armadillo/include/tf2_armadillo/: tf2_armadillo.h
omnid_supplementary_packages/tf2_armadillo/test/: test_tf2_armadillo.cpp
tf2_armadillo/: CMakeLists.txt  README.md  package.xml
tf2_armadillo/include/tf2_armadillo/: tf2_armadillo.h
