<?xml version="1.0"?>
<package format="2">
  <name>omnid</name>
  <version>0.1.0</version>
  <description>The omnid package</description>
  <maintainer email="ruotongjia2020@u.northwestern.edu">Rico Ruotong Jia</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>dynamic_reconfigure</depend>
</package>
