<?xml version="1.0"?>
<package format="2">
  <name>omnid_move_group_interface</name>
  <version>0.1.0</version>
  <description>The move_group interface for controlling a group of delta arms. Launch this node alongside moveit_config.</description>
  <maintainer email="ruotongjia2020@u.northwestern.edu">Rico Ruotong Jia</maintainer>
  <license>BSD</license>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>visualization_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>tf2_armadillo</depend>
</package>



