<?xml version="1.0"?>
<package format="2">
  <name>tf2_armadillo</name>
  <version>0.1.0</version>
  <description>tf2_armadillo</description>
  <author>Rico Ruotong Jia</author>
  <maintainer email="ruotongjia2020@u.northwestern.edu">Rico Ruotong Jia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <depend>Armadillo</depend>
  <depend>geometry_msgs</depend>
  <test_depend>rosunit</test_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
